creusot/tests/should_fail/bug/specialize.coma

module Core_Ptr_NonNull_NonNull_Type
  use prelude.Opaque
  type t_nonnull 't =
    | C_NonNull opaque_ptr
    
  function any_l (_ : 'b) : 'a
end
module Core_Marker_PhantomData_Type
  type t_phantomdata 't =
    | C_PhantomData
    
  function any_l (_ : 'b) : 'a
end
module Core_Ptr_Unique_Unique_Type
  use Core_Marker_PhantomData_Type as Core_Marker_PhantomData_Type
  use Core_Ptr_NonNull_NonNull_Type as Core_Ptr_NonNull_NonNull_Type
  type t_unique 't =
    | C_Unique (Core_Ptr_NonNull_NonNull_Type.t_nonnull 't) (Core_Marker_PhantomData_Type.t_phantomdata 't)
    
  function any_l (_ : 'b) : 'a
end
module Alloc_RawVec_Cap_Type
  use prelude.UIntSize
  use prelude.Int
  type t_cap  =
    | C_Cap usize
    
  function any_l (_ : 'b) : 'a
end
module Alloc_RawVec_RawVec_Type
  use Alloc_RawVec_Cap_Type as Alloc_RawVec_Cap_Type
  use Core_Ptr_Unique_Unique_Type as Core_Ptr_Unique_Unique_Type
  type t_rawvec 't 'a =
    | C_RawVec (Core_Ptr_Unique_Unique_Type.t_unique 't) (Alloc_RawVec_Cap_Type.t_cap) 'a
    
  function any_l (_ : 'b) : 'a
end
module Alloc_Vec_Vec_Type
  use prelude.UIntSize
  use prelude.Int
  use Alloc_RawVec_RawVec_Type as Alloc_RawVec_RawVec_Type
  type t_vec 't 'a =
    | C_Vec (Alloc_RawVec_RawVec_Type.t_rawvec 't 'a) usize
    
  function any_l (_ : 'b) : 'a
end
module Alloc_Alloc_Global_Type
  type t_global  =
    | C_Global
    
  function any_l (_ : 'b) : 'a
end
module Specialize_F
  use Alloc_Alloc_Global_Type as Alloc_Alloc_Global_Type
  use prelude.UInt32
  use prelude.Int
  use Alloc_Vec_Vec_Type as Alloc_Vec_Vec_Type
  use prelude.Intrinsic
  let rec x0 (self:Alloc_Vec_Vec_Type.t_vec uint32 (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:()))= any 
    [ return' (result:())-> {[#"../specialize.rs" 17 14 17 18] true} (! return' {result}) ]
    
  let rec f (v:Alloc_Vec_Vec_Type.t_vec uint32 (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:()))= (! bb0 
    [ bb2 = return' {_0} 
    | bb1 = {[@expl:assertion] [#"../specialize.rs" 24 20 24 25] false}
      [ &_0 <- [#"../specialize.rs" 21 18 25 1] () ] bb2 
    | bb0 = x0 {v} (fun (_ret':()) -> [ &_2 <- _ret' ] bb1)  ]
    ) [ return' (result:())-> (! return' {_0}) ] 
    [ & _0 : () = any_l () : ()
    | & v : Alloc_Vec_Vec_Type.t_vec uint32 (Alloc_Alloc_Global_Type.t_global) = v
    | & _2 : () = any_l () : () ]
    
end
module Specialize_G
  type t
  use seq.Seq
  predicate invariant1 (self : Seq.seq t)
  let rec invariant1 (self:Seq.seq t) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant1 self} (! return' {result}) ]
    
  predicate inv1 (_x : Seq.seq t)
  let rec inv1 (_x:Seq.seq t) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = inv1 _x} (! return' {result}) ]
    
  axiom inv1 : forall x : Seq.seq t . inv1 x = true
  use Alloc_Alloc_Global_Type as Alloc_Alloc_Global_Type
  use Alloc_Vec_Vec_Type as Alloc_Vec_Vec_Type
  use prelude.UIntSize
  use prelude.UIntSize
  use prelude.Int
  constant max0 : usize = (18446744073709551615 : usize)
  use seq.Seq
  predicate inv0 (_x : Alloc_Vec_Vec_Type.t_vec t (Alloc_Alloc_Global_Type.t_global))
  let rec inv0 (_x:Alloc_Vec_Vec_Type.t_vec t (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = inv0 _x} (! return' {result}) ]
    
  function shallow_model0 (self : Alloc_Vec_Vec_Type.t_vec t (Alloc_Alloc_Global_Type.t_global)) : Seq.seq t
  let rec shallow_model0 (self:Alloc_Vec_Vec_Type.t_vec t (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:Seq.seq t))= {[#"../../../../../creusot-contracts/src/std/vec.rs" 19 21 19 25] inv0 self}
    any [ return' (result:Seq.seq t)-> {result = shallow_model0 self} (! return' {result}) ] 
  axiom shallow_model0_spec : forall self : Alloc_Vec_Vec_Type.t_vec t (Alloc_Alloc_Global_Type.t_global) . ([#"../../../../../creusot-contracts/src/std/vec.rs" 19 21 19 25] inv0 self)
   -> ([#"../../../../../creusot-contracts/src/std/vec.rs" 19 4 19 36] inv1 (shallow_model0 self)) && ([#"../../../../../creusot-contracts/src/std/vec.rs" 18 14 18 41] Seq.length (shallow_model0 self) <= UIntSize.to_int (max0 : usize))
  predicate invariant0 (self : Alloc_Vec_Vec_Type.t_vec t (Alloc_Alloc_Global_Type.t_global)) =
    [#"../../../../../creusot-contracts/src/std/vec.rs" 60 20 60 41] inv1 (shallow_model0 self)
  let rec invariant0 (self:Alloc_Vec_Vec_Type.t_vec t (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant0 self} (! return' {result}) ]
    
  axiom inv0 : forall x : Alloc_Vec_Vec_Type.t_vec t (Alloc_Alloc_Global_Type.t_global) . inv0 x = true
  use prelude.Intrinsic
  let rec x0 (self:Alloc_Vec_Vec_Type.t_vec t (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:()))= {[#"../specialize.rs" 6 9 6 13] inv0 self}
    any [ return' (result:())-> (! return' {result}) ] 
  let rec g (v:Alloc_Vec_Vec_Type.t_vec t (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:()))= {[#"../specialize.rs" 27 8 27 9] inv0 v}
    (! bb0 
    [ bb2 = return' {_0} 
    | bb1 = {[@expl:assertion] [#"../specialize.rs" 31 20 31 25] false}
      [ &_0 <- [#"../specialize.rs" 27 19 32 1] () ] bb2 
    | bb0 = x0 {v} (fun (_ret':()) -> [ &_2 <- _ret' ] bb1)  ]
    ) [ return' (result:())-> (! return' {_0}) ] 
    [ & _0 : () = any_l () : ()
    | & v : Alloc_Vec_Vec_Type.t_vec t (Alloc_Alloc_Global_Type.t_global) = v
    | & _2 : () = any_l () : () ]
    
end
module Specialize_H
  use prelude.Int32
  use seq.Seq
  predicate invariant1 (self : Seq.seq int32) =
    [#"../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12] true
  let rec invariant1 (self:Seq.seq int32) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant1 self} (! return' {result}) ]
    
  predicate inv1 (_x : Seq.seq int32)
  let rec inv1 (_x:Seq.seq int32) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = inv1 _x} (! return' {result}) ]
    
  axiom inv1 : forall x : Seq.seq int32 . inv1 x = true
  use Alloc_Alloc_Global_Type as Alloc_Alloc_Global_Type
  use Alloc_Vec_Vec_Type as Alloc_Vec_Vec_Type
  use prelude.UIntSize
  use prelude.UIntSize
  use prelude.Int
  constant max0 : usize = (18446744073709551615 : usize)
  use seq.Seq
  predicate inv0 (_x : Alloc_Vec_Vec_Type.t_vec int32 (Alloc_Alloc_Global_Type.t_global))
  let rec inv0 (_x:Alloc_Vec_Vec_Type.t_vec int32 (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = inv0 _x} (! return' {result}) ]
    
  function shallow_model0 (self : Alloc_Vec_Vec_Type.t_vec int32 (Alloc_Alloc_Global_Type.t_global)) : Seq.seq int32
  let rec shallow_model0 (self:Alloc_Vec_Vec_Type.t_vec int32 (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:Seq.seq int32))= {[#"../../../../../creusot-contracts/src/std/vec.rs" 19 21 19 25] inv0 self}
    any [ return' (result:Seq.seq int32)-> {result = shallow_model0 self} (! return' {result}) ] 
  axiom shallow_model0_spec : forall self : Alloc_Vec_Vec_Type.t_vec int32 (Alloc_Alloc_Global_Type.t_global) . ([#"../../../../../creusot-contracts/src/std/vec.rs" 19 21 19 25] inv0 self)
   -> ([#"../../../../../creusot-contracts/src/std/vec.rs" 19 4 19 36] inv1 (shallow_model0 self)) && ([#"../../../../../creusot-contracts/src/std/vec.rs" 18 14 18 41] Seq.length (shallow_model0 self) <= UIntSize.to_int (max0 : usize))
  predicate invariant0 (self : Alloc_Vec_Vec_Type.t_vec int32 (Alloc_Alloc_Global_Type.t_global)) =
    [#"../../../../../creusot-contracts/src/std/vec.rs" 60 20 60 41] inv1 (shallow_model0 self)
  let rec invariant0 (self:Alloc_Vec_Vec_Type.t_vec int32 (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:bool))= any
    [ return' (result:bool)-> {result = invariant0 self} (! return' {result}) ] 
  axiom inv0 : forall x : Alloc_Vec_Vec_Type.t_vec int32 (Alloc_Alloc_Global_Type.t_global) . inv0 x = true
  use prelude.Intrinsic
  let rec x0 (self:Alloc_Vec_Vec_Type.t_vec int32 (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:()))= {[#"../specialize.rs" 12 17 12 21] inv0 self}
    any [ return' (result:())-> {[#"../specialize.rs" 11 14 11 19] false} (! return' {result}) ] 
  let rec h (v:Alloc_Vec_Vec_Type.t_vec int32 (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:()))= (! bb0 
    [ bb2 = return' {_0} 
    | bb1 = {[@expl:assertion] [#"../specialize.rs" 37 20 37 25] false}
      [ &_0 <- [#"../specialize.rs" 34 18 38 1] () ] bb2 
    | bb0 = x0 {v} (fun (_ret':()) -> [ &_2 <- _ret' ] bb1)  ]
    ) [ return' (result:())-> (! return' {_0}) ] 
    [ & _0 : () = any_l () : ()
    | & v : Alloc_Vec_Vec_Type.t_vec int32 (Alloc_Alloc_Global_Type.t_global) = v
    | & _2 : () = any_l () : () ]
    
end
module Specialize_Impl0
  type u
  use seq.Seq
  predicate invariant1 (self : Seq.seq u)
  let rec invariant1 (self:Seq.seq u) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant1 self} (! return' {result}) ]
    
  predicate inv1 (_x : Seq.seq u)
  let rec inv1 (_x:Seq.seq u) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = inv1 _x} (! return' {result}) ]
    
  axiom inv1 : forall x : Seq.seq u . inv1 x = true
  use Alloc_Alloc_Global_Type as Alloc_Alloc_Global_Type
  use Alloc_Vec_Vec_Type as Alloc_Vec_Vec_Type
  use prelude.UIntSize
  use prelude.UIntSize
  use prelude.Int
  constant max0 : usize = (18446744073709551615 : usize)
  use seq.Seq
  predicate inv0 (_x : Alloc_Vec_Vec_Type.t_vec u (Alloc_Alloc_Global_Type.t_global))
  let rec inv0 (_x:Alloc_Vec_Vec_Type.t_vec u (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = inv0 _x} (! return' {result}) ]
    
  function shallow_model0 (self : Alloc_Vec_Vec_Type.t_vec u (Alloc_Alloc_Global_Type.t_global)) : Seq.seq u
  let rec shallow_model0 (self:Alloc_Vec_Vec_Type.t_vec u (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:Seq.seq u))= {[#"../../../../../creusot-contracts/src/std/vec.rs" 19 21 19 25] inv0 self}
    any [ return' (result:Seq.seq u)-> {result = shallow_model0 self} (! return' {result}) ] 
  axiom shallow_model0_spec : forall self : Alloc_Vec_Vec_Type.t_vec u (Alloc_Alloc_Global_Type.t_global) . ([#"../../../../../creusot-contracts/src/std/vec.rs" 19 21 19 25] inv0 self)
   -> ([#"../../../../../creusot-contracts/src/std/vec.rs" 19 4 19 36] inv1 (shallow_model0 self)) && ([#"../../../../../creusot-contracts/src/std/vec.rs" 18 14 18 41] Seq.length (shallow_model0 self) <= UIntSize.to_int (max0 : usize))
  predicate invariant0 (self : Alloc_Vec_Vec_Type.t_vec u (Alloc_Alloc_Global_Type.t_global)) =
    [#"../../../../../creusot-contracts/src/std/vec.rs" 60 20 60 41] inv1 (shallow_model0 self)
  let rec invariant0 (self:Alloc_Vec_Vec_Type.t_vec u (Alloc_Alloc_Global_Type.t_global)) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant0 self} (! return' {result}) ]
    
  axiom inv0 : forall x : Alloc_Vec_Vec_Type.t_vec u (Alloc_Alloc_Global_Type.t_global) . inv0 x = true
  goal x_refn : [#"../specialize.rs" 12 4 12 22] forall self : Alloc_Vec_Vec_Type.t_vec u (Alloc_Alloc_Global_Type.t_global) . inv0 self
   -> inv0 self
end
module Specialize_Impl1
  goal x_refn : [#"../specialize.rs" 18 4 18 14] true
end
